--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.3.0",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "nodemailer-express-handlebars": "^6.1.2"
   }
 }
