--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "node ./tests/index.test"
+    "test": "NODE_ENV=test node ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -12,9 +12,14 @@
     "debug": "^4.3.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.0.1",
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.13",
-    "nodemailer-express-handlebars": "^6.1.2"
+    "nodemailer-express-handlebars": "^6.1.2",
+    "rand-token": "^1.0.1",
+    "uuid": "^9.0.1"
   }
 }
