--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
+    "nodemailer-express-handlebars": "^6.1.2",
+    "rand-token": "^1.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
